@startuml big_mess

title Big mess

/' Pipeline Elements '/
abstract PipelineElement {
    {abstract} get_data()
    {abstract} set_logger()
    {abstract} set_source()
    {abstract} pass_data()
}

abstract CachedElement {
    {abstract} set_cache_dir()
    {abstract} set_cache_file()
    {abstract} cache_data()
    {abstract} retrieve_cached_data()
}

/' Data Collectors '/
abstract DataCollector {
    set_logger()
    set_source()
    pass_data()
    set_cache_dir()
    set_cache_file()
    cache_data()
    retrieve_cached_data()
}

class EsriDataCollector { 
    get_data() 
}

class FileDataCollector { 
    get_data() 
}

class RequestsDataCollector { 
    get_data() 
}

class ZippedDataCollector { 
    get_data() 
}


PipelineElement <|-- DataCollector
CachedElement <|-- DataCollector

DataCollector <|-- EsriDataCollector
DataCollector <|-- FileDataCollector
DataCollector <|-- RequestsDataCollector
DataCollector <|-- ZippedDataCollector

/' Factories '/
abstract PipelineElementFactory {
    {abstract} get_element()
}

class DataCollectorFactory {
    get_element()
}

class DataSnifferFactory {
    get_element()
}

class DataConverterFactory {
    get_element()
}

PipelineElementFactory <|-- DataCollectorFactory 
PipelineElementFactory <|-- DataSnifferFactory 
PipelineElementFactory <|-- DataConverterFactory 

DataCollectorFactory -- DataCollector
DataSnifferFactory -- DataSniffer
DataConverterFactory -- DataConverter

/' Data Sniffers '/
abstract DataSniffer {
    set_logger()
    set_source()
    pass_data()
    {abstract} get_attributes()
}
class CsvDataSniffer {
    get_attributes()
}

class JsonDataSniffer {
    get_attributes()
}

class KmlDataSniffer {
    get_attributes()
}

PipelineElement <|-- DataSniffer
DataSniffer <|-- CsvDataSniffer
DataSniffer <|-- JsonDataSniffer
DataSniffer <|-- KmlDataSniffer

/' Data Converters'/
abstract DataConverter {
    set_logger()
    set_source()
    pass_data()
    {abstract} convert_data()
}

class FireWikiDataConverter {
    convert_data()
}

PipelineElement <|-- DataConverter
DataConverter <|-- FireWikiDataConverter

@enduml